--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <title> Kasandra Duckett Portfolio </Title>
+    <link rel="stylesheet" href="CSS/style.css" type="text/css">
+</head>
+
+<body>
+    <div class="homepage-iteration-3 screen">
+        <div class="overlap-group4 overlap">
+            <img class="kasHEIC" src="Images/Kas.jpg" alt="Kasandra" />
+            <div class="flex-col">
+                <p class="hi-i-am-kasandra-f">Hi! I am Kasandra, Freelance UX Researcher</p>
+                <h1 class="empathy-in-every-cl">
+                    "Empathy in Every Click: User-Centric Research with a Focus on Empathy, Benefiting Both Users and
+                    Stakeholders"
+                </h1>
+                <div class="primary nav">
+                    <div class="overlap-group2 overlap">
+                        <div class="link ruda-normal-black-20px">About Me</div>
+                    </div>
+                    <div class="overlap-group3 overlap">
+                        <div class="link ruda-normal-black-20px">Work</div>
+                    </div>
+                    <div class="overlap-group overlap">
+                        <div class="link ruda-normal-black-20px">Resume</div>
+                    </div>
+                    <div class="overlap-group1 overlap">
+                        <div class="place ruda-normal-black-20px">Contact</div>
+                    </div>
+                </div>
+
+            <div class="smedia"> 
+                <img class="socials" src="Images/Lsocials.png" alt="Socials" />
+                <img class="socials" src="Images/Msocials.png" alt="Socials" />
+            </div>
+        </div>
+        </div>
+    </div>
+</body>
+
+</html>
