--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <div class="overlap-group4 overlap">
             <img class="kasHEIC" src="Images/Kas.jpg" alt="Kasandra" />
             <div class="flex-col">
-                <p class="hi-i-am-kasandra-f">Hi! I am Kasandra, Freelance UX Researcher</p>
+                <link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link href="https://fonts.googleapis.com/css2?family=Ruda&display=swap" rel="stylesheet">
+
+                <p class="kasandraf">Hi! I am Kasandra, Freelance UX Researcher</p>
                 <h1 class="empathy-in-every-cl">
                     "Empathy in Every Click: User-Centric Research with a Focus on Empathy, Benefiting Both Users and
                     Stakeholders"
                 </h1>
-                <div class="primary nav">
+                <div class="primary nav" style="display: flex; flex-direction: row;">
                     <div class="overlap-group2 overlap">
                         <div class="link ruda-normal-black-20px">About Me</div>
                     </div>
