--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <title> Kasandra Duckett Portfolio </Title>
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Ruda&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -11,9 +14,6 @@
         <div class="overlap-group4 overlap">
             <img class="kasHEIC" src="Images/Kas.jpg" alt="Kasandra" />
             <div class="flex-col">
-                <link rel="preconnect" href="https://fonts.googleapis.com">
-                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-                <link href="https://fonts.googleapis.com/css2?family=Ruda&display=swap" rel="stylesheet">
 
                 <p class="kasandraf">Hi! I am Kasandra, Freelance UX Researcher</p>
                 <h1 class="empathy-in-every-cl">
@@ -24,11 +24,11 @@
                     <div class="overlap-group2 overlap">
                         <div class="link ruda-normal-black-20px">About Me</div>
                     </div>
-                    <div class="overlap-group3 overlap">
+                    <div class="overlap-group overlap">
                         <div class="link ruda-normal-black-20px">Work</div>
                     </div>
                     <div class="overlap-group overlap">
-                        <div class="link ruda-normal-black-20px">Resume</div>
+                        <a href="Resume/Kasandra Duckett resume.pdf" target="_blank" class="link ruda-normal-black-20px">Resume</a>
                     </div>
                     <div class="overlap-group1 overlap">
                         <div class="place ruda-normal-black-20px">Contact</div>
